# ultraworker

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh  skills-lock.json  ultrawork.yaml  vercel.json
.claude/agents/: context-explorer.md  reporter.md  slack-monitor.md  spec-writer.md  todo-generator.md
.claude/skills/approve/: SKILL.md
.claude/skills/create-todo/: SKILL.md
.claude/skills/explore-context/: SKILL.md
.claude/skills/gemini-x-image-post/: SKILL.md
.claude/skills/human-response/: SKILL.md
.claude/skills/manage-cronjob/: SKILL.md
.claude/skills/memory-rebuild/: SKILL.md
.claude/skills/memory-status/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/reject/: SKILL.md
.claude/skills/remember/: SKILL.md
.claude/skills/report/: SKILL.md
.claude/skills/respond-mention/: SKILL.md
.claude/skills/sync-channel-history/: SKILL.md
.claude/skills/sync-slack/: SKILL.md
data/: demo_script.md  project_description.md
data/cronjobs/: CRON-2026-0219-001.yaml  CRON-2026-0219-002.yaml
public/: index.html
public/dashboard/: index.html
src/ultrawork/: __init__.py  config.py  main.py  tunnel.py
tests/: test_dashboard_thread_worktree_api.py  test_downloader.py  test_facet.py  test_facet_index.py  test_installer_checks.py  test_linker.py  test_ltm_integration.py  test_models_ltm.py  test_reaction_approval.py  test_record_store.py  test_redact.py  test_save_policy.py  test_search.py  test_session_manager_thread_index.py  test_worktree_parser.py
(+1304 files in other folders)
